src/mobile.css
@media screen and (max-width: 750px) {
  :root {
    overflow-x: hidden;
  }

  .landing-section {
    flex-direction: column;
    justify-content: stretch;

    width: 100%;

    padding: 2rem 0rem;
  }

  .landing-section-content {
    display: flex;
    flex-direction: column;

    padding: 0rem 0rem;

    gap: 0.5rem;
  }

  .landing-section-content-header {
    display: flex;
    flex-direction: column;
    align-items: flex-start;

    padding: 0rem 1rem;

    gap: 0.2rem;
  }

  .landing-section-image {
    margin: 1rem 0rem;

    width: 90%;
    height: auto;
  }

  .landing-section-hello {
    font-size: 2.5rem;
  }

  .landing-section-name {
    font-size: 3rem;
    letter-spacing: 0.15rem;
  }

  .landing-section-description {
    margin: 0rem;
    font-size: 1.5rem;

    padding: 0rem 1rem;

    width: 23rem;
  }

  .landing-section-button-list {
    margin: 0.5rem 0rem;
    flex-direction: column;

    padding: 0rem 1rem;

    gap: 1rem;
  }

  .landing-section-button {
    gap: 1rem;
    padding: 0.2rem 0.5rem;

    font-size: 1.5rem;
    border: 1px solid var(--color-black);
    border-radius: 10px;
  }

  .landing-section-button:hover {
    color: var(--color-black);
    font-weight: normal;
    transform: none;
  }

  .landing-section-button > img {
    width: 2rem;
    height: 2rem;
  }

  .skills-section {
    margin: 0rem;
    background-color: var(--color-black);

    padding: 5rem 1rem;
  }

  .skill-card {
    flex-direction: row;
    align-items: center;
    justify-content: start;
    padding: 0.5rem 1rem;

    height: 5.5rem;
    width: fit-content;

    border: 1px solid var(--color-red);
  }

  .skill-card-image {
    height: 3.5rem;
  }

  .skill-card-name {
    font-size: 1.1rem;
  }

  .projects-section {
    margin: 0rem;
    background-color: var(--color-white);

    padding: 5rem 1rem;
  }

  .projects-container {
    justify-content: center;
  }

  .project-card {
    width: 100%;
    height: auto;
    aspect-ratio: 16/9;

    gap: 0.5rem;

    box-shadow: none;

    display: flex;
    flex-direction: row;
  }

  .project-card:hover {
    transform: none;
  }

  .project-card-black-area {
    height: 10rem;
    width: 100%;

    padding: 0rem 0.5rem;

    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.9));
  }

  .project-card-top-line {
    display: flex;
    flex-direction: row;
    justify-content: start;
    align-items: center;
  }

  .project-card-chip-list {
    padding-left: 0.5rem;
    display: flex;
    flex-direction: row;
    justify-content: start;
  }

  .project-card-chip {
    padding: 0.1rem 0.3rem;

    font-size: 0.8rem;
  }

  .project-card-chip-cirle {
    width: 0.3rem;
    height: 0.3rem;
  }

  .prject-card-description {
    margin-block: 0rem 0.5rem;

    font-size: 1.1rem;
  }

  .project-card-github {
    display: none;
    align-items: end;
  }

  .project-card-github:hover {
    transform: none;
  }

  .project-card-github > img {
    width: 3rem;
    height: 3rem;
  }
}

